creation use this approach. 
Add back some output when methods are applied - helps with debugging while we wait for 
Transcript support. (Coming later today).


10/09/2011 Changes

Adding PowerMock and EasyMock for unit testing
Adding first unit test of an Integer primitive
Removed unnecessary Bootstrapping of Number classes
Fixing equality checks on Integers

10/09/2011 Changes

Start of Number support.  Adding object creation for basic Numbers.
All LiteralNumbers parse as Integers now.

10/09/2011 Changes

Removed trailing separator from source paths.
Added Transcript class with ability to output to Console.


08/09/2011 Changes

Changed use of "/" in some places to use File.separator, so things work on windows.
(Suggestion from Stefan Krecher)
Modified stic usage message to use File.separator.
More modifications around replacing File paths correctly under windows and linux.


07/09/2011 Changes

Adjusted snapshot version number.


06/09/2011 Changes

Pulled contribution. Now supporting Maven.
Modified maven pom to copy across 'extras' into target/redline-deploy/extras.
Changed runtime path to match where maven puts the runtime soruces.
Added reserved word Smalltalk and associated SmalltalkImage class.


03/09/2011 Changes

Added paths spec for Redline runtime so you can choose which runtime you want.


02/09/2011 Changes

Added command line argument parsing back into Redline.


29/08/2011 Changes

Implementing primitives.
Fixed bug preprocessing binary message patterns.


27/08/2011 Changes 

Continuing implementation of Stout and associated methods needed in Redline Runtime.
Adding handler for more arguments to methods. There is a limit.

26/08/2011 Changes

Implemented import. Moving onto further Stout functionality.


24/08/2011 Changes

Adding implementation of import: method.


21/08/2011 Changes

Adding ability to emit JVM bytecode from within a Smalltalk method.
Adding wrap and dispatch to Stout web framework.
Adding start of import from a namespace

