@@ -27,6 +27,8 @@ import org.junit.runner.RunWith;
 import org.powermock.core.classloader.annotations.PrepareForTest;
 import org.powermock.modules.junit4.PowerMockRunner;
 
+import javax.accessibility.AccessibleStateSet;
+
 import static org.easymock.EasyMock.expect;
 import static org.powermock.api.easymock.PowerMock.*;
 
@@ -55,5 +57,239 @@ public class ProtoObjectTest {
 
 		// verify that the expected, mocked partial (primitiveInteger) is called
 		verify(ProtoObject.class);
+	}
+
+	@Test
+	public void integerSubtraction() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(3));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(2));
+
+		mockStaticPartial(ProtoObject.class, "primitiveInteger");
+		ProtoObject result = createMock(ProtoObject.class);
+		// this call to primitiveInteger generates our result, which is 1 + 2
+		expect(ProtoObject.primitiveInteger(integer1, 3 - 2)).andReturn(result);
+
+		replay(integer1, integer2, result, ProtoObject.class);
+
+		ProtoObject.primitive_22(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+	}
+
+	@Test
+	public void integerLessThan() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(2));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(3));
+
+		replay(integer1, integer2);
+
+		ProtoObject result = ProtoObject.primitive_23(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+
+		Assert.assertEquals(ProtoObject.instanceOfTrue, result);
+	}
+
+	@Test
+	public void integerNotLessThan() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(3));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(2));
+
+		replay(integer1, integer2);
+
+		ProtoObject result = ProtoObject.primitive_23(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+
+		Assert.assertEquals(ProtoObject.instanceOfFalse, result);
+	}
+
+	@Test
+	public void integerGreaterThan() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(3));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(2));
+
+		replay(integer1, integer2);
+
+		ProtoObject result = ProtoObject.primitive_24(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+
+		Assert.assertEquals(ProtoObject.instanceOfTrue, result);
+	}
+
+	@Test
+	public void integerNotGreaterThan() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(2));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(3));
+
+		replay(integer1, integer2);
+
+		ProtoObject result = ProtoObject.primitive_24(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+
+		Assert.assertEquals(ProtoObject.instanceOfFalse, result);
+	}
+
+	@Test
+	public void integerLessThanEquals() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(3));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(3));
+
+		replay(integer1, integer2);
+
+		ProtoObject result = ProtoObject.primitive_25(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+
+		Assert.assertEquals(ProtoObject.instanceOfTrue, result);
+	}
+
+	@Test
+	public void integerNotLessThanEquals() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(3));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(2));
+
+		replay(integer1, integer2);
+
+		ProtoObject result = ProtoObject.primitive_25(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+
+		Assert.assertEquals(ProtoObject.instanceOfFalse, result);
+	}
+
+	@Test
+	public void integerGreaterThanEquals() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(3));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(2));
+
+		replay(integer1, integer2);
+
+		ProtoObject result = ProtoObject.primitive_26(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+
+		Assert.assertEquals(ProtoObject.instanceOfTrue, result);
+	}
+
+	@Test
+	public void integerNotGreaterThanEquals() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(2));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(3));
+
+		replay(integer1, integer2);
+
+		ProtoObject result = ProtoObject.primitive_26(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+
+		Assert.assertEquals(ProtoObject.instanceOfFalse, result);
+	}
+
+	@Test
+	public void integerEquals() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(3));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(3));
+
+		replay(integer1, integer2);
+
+		ProtoObject result = ProtoObject.primitive_27(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+
+		Assert.assertEquals(ProtoObject.instanceOfTrue, result);
+	}
+
+	@Test
+	public void integerNotEquals() {
+		// we're going to ensure that adding up 1 and 2 works.
+		ProtoObject integer1 = createMock(ProtoObject.class);
+		ProtoObject integer2 = createMock(ProtoObject.class);
+
+		// integer1 is our receiver;
+		expect(integer1.javaValue()).andReturn(new Integer(3));
+		// integer2 is our argument;
+		expect(integer2.javaValue()).andReturn(new Integer(2));
+
+		replay(integer1, integer2);
+
+		ProtoObject result = ProtoObject.primitive_27(integer1, null, integer2, null, null, null, null);
+
+		// verify that the expected, mocked partial (primitiveInteger) is called
+		verify(ProtoObject.class);
+
+		Assert.assertEquals(ProtoObject.instanceOfFalse, result);
 	}
 }
